# On-Demand

./: .gitignore  Cargo.toml  README.md
client/consensus/on-demand-aura/: Cargo.toml
client/consensus/on-demand-aura/src/: collator.rs  equivocation_import_queue.rs  import_queue.rs  lib.rs
client/consensus/on-demand-aura/src/collators/: basic.rs  mod.rs
example/: Cargo.toml
example/node/: Cargo.toml
example/node/src/: service.rs
example/runtime/: Cargo.toml
example/runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
example/runtime/src/configs/: mod.rs  xcm_config.rs
pallets/on-demand/: Cargo.toml
pallets/on-demand/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
primitives/order/: Cargo.toml
primitives/order/src/: inherent.rs  lib.rs  well_known_keys.rs
services/order/: Cargo.toml
services/order/src/: chain.rs  config.rs  lib.rs
template/: Cargo.toml  README.md  zombienet.toml
template/e2e/: order-placement.ts
template/node/: Cargo.toml
template/node/src/: cli.rs  command.rs  service.rs
template/runtime/: Cargo.toml
template/runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
template/runtime/src/configs/: mod.rs
