[workspace]
resolver = "2"
members = [ "client/consensus/*","pallets/*", "primitives/*", "services/*", "temp-test"]

[workspace.package]
name = "on-demand"
version = "0.1.0"
authors = [""]
description = "Framework for on-demand parachain development"
license = "GPLv3"
repository = "https://github.com/RegionX-Labs/On-Demand"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.85"
serde = { version = "1.0.201", default-features = false }
smallvec = "1.11.0"
futures = "0.3.31"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.11.3", default-features = false }
hex-literal = "0.4.1"
subxt = "0.38.0"
parking_lot = { version = "0.12.1", default-features = false }
tokio = { version = "1.40.0", default-features = false }
schnellru = { version = "0.2.3" }
tracing = { version = "0.1.37", default-features = false }

# Substrate

frame = { version = "0.7.0", package = "polkadot-sdk-frame", default-features = false }
frame-benchmarking = { version = "38.0.0", default-features = false }
frame-support = { version = "38.2.0", default-features = false }

sc-consensus = { version = "0.44.0", default-features = false }
sc-consensus-babe = { version = "0.45.0", default-features = false }
sc-consensus-slots = { version = "0.44.0", default-features = false }
sc-telemetry = { version = "25.0.0", default-features = false }
sc-transaction-pool-api = { version = "37.0.0", default-features = false }
sc-client-api = { version = "37.0.0", default-features = false }
sc-consensus-aura = { version = "0.45.0", default-features = false }
sc-service = { version = "0.46.0", default-features = false }
sc-utils = { version = "17.0.0", default-features = false }

sp-api = { version = "34.0.0", default-features = false }
sp-application-crypto = { version = "38.0.0" }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.1", default-features = false }
sp-consensus = { version = "0.40.0", default-features = false }
sp-consensus-slots = { version = "0.40.1", default-features = false }
sp-consensus-aura = { version = "0.40.0" }
sp-timestamp = { version = "34.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-runtime = { version = "39.0.5", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-state-machine = { version = "0.43.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-trie = { version = "37.0.0", default-features = false }

pallet-balances = { version = "39.0.0", default-features = false }

# Cumulus
cumulus-primitives-core = { version = "0.17.0", default-features = false }
cumulus-relay-chain-interface = { version = "0.8.0", default-features = false }
cumulus-client-consensus-aura = { version = "0.18.0", default-features = false }
cumulus-client-consensus-common = { version = "0.18.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.17.1", default-features = false }
cumulus-client-collator = { version = "0.18.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.16.0", default-features = false }
cumulus-client-parachain-inherent = { version = "0.12.0", default-features = false }
cumulus-primitives-aura = { version = "0.15.0", default-features = false }

# Polkadot
polkadot-primitives = { version = "16.0.0", default-features = false }
polkadot-runtime-parachains = { version = "17.0.1" }
polkadot-node-primitives = { version = "16.0.0" }
polkadot-node-subsystem = { version = "18.0.0" }
polkadot-node-subsystem-util = { version = "18.0.0" }
polkadot-overseer = { version = "18.0.0" }

# Local
pallet-on-demand = { path = "./pallets/on-demand" }
order-primitives = { path = "./primitives/order" }
order-service = { path = "./services/order" }
on-demand-aura = { path = "./client/consensus/on-demand-aura" }
temp-test = { path = "./temp-test" }
