[workspace]
resolver = "2"
members = [ "client/consensus/*","pallets/*", "primitives/*", "services/*" ]

[workspace.package]
name = "on-demand"
version = "0.1.0"
authors = [""]
description = "Framework for on-demand parachain development"
license = "GPLv3"
repository = "https://github.com/RegionX-Labs/On-Demand"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.85"
serde = { version = "1.0.201", default-features = false }
smallvec = "1.11.0"
futures = "0.3.31"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.11.3", default-features = false }
hex-literal = "0.4.1"
subxt = "0.38.0"
parking_lot = { version = "0.12.1", default-features = false }
tokio = { version = "1.40.0", default-features = false }
schnellru = { version = "0.2.3" }
tracing = { version = "0.1.37", default-features = false }

# Substrate

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }

sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sc-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }

sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }

substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
cumulus-client-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }

# Polkadot
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412" }
polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412" }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412" }

# Local
pallet-on-demand = { path = "./pallets/on-demand" }
order-primitives = { path = "./primitives/order" }
order-service = { path = "./services/order" }
on-demand-aura = { path = "./client/consensus/on-demand-aura" }
temp-test = { path = "./temp-test" }
