[workspace.package]
license = "MIT-0"
authors = []
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-parachain-template.git"
edition = "2021"

[workspace]
members = ["node", "pallets/template", "runtime"]
resolver = "2"

[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
clap = { version = "4.5.13" }
color-print = { version = "0.3.4" }
docify = { version = "0.2.9" }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.11.3", default-features = false }
hex-literal = "0.4.1"
serde = { version = "1.0.201", default-features = false }
smallvec = "1.11.0"
serde_json = { version = "1.0.132", default-features = false }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }

polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
frame = { package = "polkadot-sdk-frame", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }

sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }
cumulus-pallet-parachain-system = {  git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }

substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412", default-features = false }

pallet-parachain-template = { path = "./pallets/template", default-features = false }
parachain-template-runtime = { path = "./runtime", default-features = false }

# Local Modules
order-service = { path = "../services/order" }
order-primitives = { path = "../primitives/order", default-features = false }
pallet-on-demand = { path = "../pallets/on-demand", default-features = false }
