[package]
name = "pallet-on-demand"
authors = ["RegionX"]
version = "0.1.0"
license = "MIT"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

# Substrate
frame-system = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
sp-application-crypto = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
pallet-aura = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
pallet-staking = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
staging-xcm-builder = { workspace = true, default-features = false }

# Polkadot
polkadot-runtime-parachains = { workspace = true, default-features = false }
polkadot-primitives = { workspace = true, default-features = false }

# Cumulus
cumulus-primitives-core = { workspace = true, default-features = false }
cumulus-pallet-parachain-system = { workspace = true, default-features = false }

# Local
order-primitives = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
sp-keyring = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-collator-selection = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
cumulus-pallet-parachain-system = { workspace = true, default-features = false }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"staging-xcm-builder/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-application-crypto/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-consensus-aura/std",
	"sp-io/std",
	"sp-keyring/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"order-primitives/std",
	"cumulus-primitives-core/std",
	"cumulus-pallet-parachain-system/std",
	"polkadot-runtime-parachains/std",
	"polkadot-primitives/std",
	"cumulus-pallet-parachain-system/std",
	"staging-xcm-builder/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
